--- a/src/pages/cashout/Cashout.css
+++ b/src/pages/cashout/Cashout.css
@@ -2,12 +2,16 @@
     width: 100%;
     height: 140px;
     background: #f5f5f5;
+    font-weight: 600;
+    color: rgba(52, 44, 44, 0.85);
 }
 
 .remainder {
     font-size: 18px;
     font-family: microsoft yahei;
     padding: 0.8rem;
+    color: #838181;
+    font-weight: 600;
 }
 
 .cashout-btn {
